# File_Server

./: AutorizationHandler.cpp  CMakeLists.txt  DataHandler.cpp  DownloadHandler.cpp  FileHandler.cpp  MyRequestHandlerFactory.cpp  RegistrationHandler.cpp  RootHandler.cpp  TestHandler.cpp  UserPageHandler.cpp  notes  server.cpp
